<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_color"
    android:gravity="center_vertical"
    tools:context=".fragments.MenuFragment">

 <Button
     android:id="@+id/menuContinue"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/board_background"
     android:text="@string/continue_game"
     android:textAllCaps="false"
     android:visibility="gone"
     android:textColor="@color/white"
     android:textSize="@dimen/text_size_menu_btn"
     android:layout_marginHorizontal="60dp"
    android:fontFamily="@font/font"
     android:layout_marginVertical="8dp"
     android:paddingVertical="8dp"/>
    <Button
        android:id="@+id/menuNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/board_background"
        android:text="@string/new_game"
        android:layout_marginHorizontal="60dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_menu_btn"
        android:layout_marginVertical="8dp"
      android:fontFamily="@font/font"
        android:paddingVertical="8dp"/>

    <Button
        android:id="@+id/menuAboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/board_background"
        android:text="@string/about_app"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_menu_btn"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="60dp"
        android:fontFamily="@font/font"
        android:paddingVertical="8dp"/>
    <Button
        android:id="@+id/menuExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/board_background"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_menu_btn"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="60dp"
       android:fontFamily="@font/font"
        android:paddingVertical="8dp"/>

</LinearLayout>