<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    tools:context=".fragments.SettingFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/extra_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/setting_back_btn"
            android:layout_width="@dimen/back_width"
            android:layout_height="@dimen/back_width"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@drawable/layout_container_bg"
            android:padding="8dp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/font"
            android:gravity="center_vertical"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_menu_btn" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/switchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/font"
            android:text="@string/sound"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_title" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:thumb="@drawable/thumb_switch"
            app:track="@drawable/track_switch"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/extra_color" />

    <LinearLayout
        android:id="@+id/deleteContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/font"
            android:text="@string/delete_high_score"

            android:textColor="@color/danger_color"
            android:textSize="@dimen/text_size_title" />

        <ImageView
            android:layout_width="@dimen/back_width"
            android:layout_height="@dimen/back_width"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:padding="3dp"
            android:src="@drawable/outline_delete_24"


            />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/extra_color" />

</LinearLayout>